# diffusion-app

./: README.md  goedel.job  install.sh  main.py  pyproject.toml  relay.py
.undodir/: %Users%mb715%Code%diffusion-app%hydra_plugins%sp_plugin.py  %Users%mb715%Code%diffusion-app%main.py  %Users%mb715%Code%diffusion-app%pyproject.toml  %Users%mb715%Code%diffusion-app%relay.py
conf/stable_diffusion_relay/: config.yaml
conf/stable_diffusion_relay/configen/diffusers/schedulers/scheduling_ddim/: conf.py
conf/stable_diffusion_relay/configen/diffusers/schedulers/scheduling_lms_discrete/: conf.py
conf/stable_diffusion_relay/configen/diffusers/schedulers/scheduling_pndm/: conf.py
conf/stable_diffusion_relay/configen/relay/: conf.py
conf/stable_diffusion_relay/sampling/: sampling_conf.yaml
conf/stable_diffusion_relay/sampling/sampling_conf/: default.yaml
conf/stable_diffusion_relay/scheduler/: ddim.yaml  lms.yaml  pndms.yaml
conf/stable_diffusion_relay/scheduler/ddim/: default.yaml
conf/stable_diffusion_relay/scheduler/lms/: default.yaml
conf/stable_diffusion_relay/scheduler/pndms/: default.yaml
conf/stable_diffusion_relay/wandb/: wandb_conf.yaml
conf/stable_diffusion_relay/wandb/wandb_conf/: default.yaml
hydra_plugins/: sp_plugin.py
static_confs/experiment/: hf_default.yaml
static_confs/hydra/launcher/: slurm_goedel.yaml
